# embeddedSystem_nctu

finalProject/: CMakeLists.txt  facerec_eigenfaces.cpp  makefile  readme.md
lab1/: readme.md
lab1/code/: hello_world  hello_world.c
lab2-1/: Makefile  README.md  bonous.cpp  group_04.cpp
lab2-2/: group_04.cpp  makefile
lab2-3/: lab_2_bonus.cpp
transferFile/: Makefile  at.txt  crossReconginition  encoded.txt  readImg  readf.c  readme.md  receive.sh  simshell.c  transferFile.sh
